Add more button features

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,6 +30,7 @@
 		"lint:fix": "eslint --fix src"
 	},
 	"dependencies": {
+		"@heroicons/react": "^2.0.13",
 		"ariakit": "^2.0.0-next.43",
 		"clsx": "^1.2.1",
 		"tailwind-merge": "^1.8.1"
