--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -10,8 +10,8 @@
 		"moduleResolution": "node",
 		"module": "esnext",
 		"target": "esnext",
-		"jsx": "react-jsx",
+		"jsx": "react-jsx"
 	},
-	"include": ["src"],
+	"include": ["src", "cypress"],
 	"exclude": ["node_modules", "dist"]
 }
