--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"postinstall": "lerna bootstrap",
 		"build": "lerna run --stream build",
 		"start": "lerna run --stream start",
+		"lint": "lerna run --stream lint",
+		"test": "lerna run --stream test",
 		"lerna:publish": "lerna publish --no-git-tag-version --no-push"
 	},
 	"devDependencies": {
