--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -3,13 +3,14 @@
 		"eslint:recommended",
 		"plugin:react/recommended",
 		"plugin:@typescript-eslint/recommended",
-		"plugin:prettier/recommended",
+		"plugin:prettier/recommended"
 	],
 	"parser": "@typescript-eslint/parser",
 	"plugins": ["react", "@typescript-eslint"],
 	"rules": {
 		"@typescript-eslint/no-empty-function": "off",
 		"@typescript-eslint/no-namespace": "off",
+		"react/react-in-jsx-scope": "off",
 		"react/display-name": "off",
 		"react/prop-types": "off",
 		"curly": "error"
