--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,6 +52,7 @@
 		"cypress": "^12.3.0",
 		"eslint": "^8.7.0",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-storybook": "^0.6.4",
 		"prettier": "^2.8.1",
