--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,4 @@ jobs:
             - name: Install dependencies
               run: yarn install
             - name: Test
-              uses: cypress-io/github-action@v5
-              with:
-                  build: yarn build
-                  start: yarn test
+              run: yarn test
